# buildarr-radarr

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: release.md
buildarr_radarr/: __init__.py  api.py  cli.py  exceptions.py  manager.py  plugin.py  secrets.py  types.py  util.py
buildarr_radarr/config/: __init__.py  types.py  util.py
buildarr_radarr/config/settings/: __init__.py  general.py  media_management.py  quality.py  tags.py  ui.py
buildarr_radarr/config/settings/custom_formats/: __init__.py  custom_format.py
buildarr_radarr/config/settings/custom_formats/conditions/: base.py  edition.py  indexer_flag.py  language.py  quality_modifier.py  release_group.py  release_title.py  resolution.py  size.py  source.py
buildarr_radarr/config/settings/download_clients/: __init__.py  base.py
buildarr_radarr/config/settings/download_clients/torrent/: aria2.py  base.py  blackhole.py  deluge.py  downloadstation.py  flood.py  freebox.py  hadouken.py  qbittorrent.py  rtorrent.py  transmission.py  utorrent.py  vuze.py
buildarr_radarr/config/settings/download_clients/usenet/: base.py  blackhole.py  downloadstation.py  nzbget.py  nzbvortex.py  pneumatic.py  sabnzbd.py
buildarr_radarr/config/settings/indexers/: __init__.py  base.py  util.py
buildarr_radarr/config/settings/lists/: __init__.py  base.py  couchpotato.py  exclusions.py  radarr_import.py
buildarr_radarr/config/settings/metadata/: __init__.py  base.py  emby_legacy.py  kodi_emby.py  roksbox.py  wdtv.py
buildarr_radarr/config/settings/notifications/: __init__.py  apprise.py  base.py  boxcar.py  custom_script.py  discord.py  email.py  emby_jellyfin.py  gotify.py  join.py  kodi.py  mailgun.py  notifiarr.py  ntfy.py  prowl.py  pushbullet.py  pushover.py  pushsafer.py  sendgrid.py  signal.py  simplepush.py  slack.py  synology_indexer.py  telegram.py  webhook.py
buildarr_radarr/config/settings/profiles/: __init__.py  delay_profiles.py  quality_profiles.py
docs/: index.md  release-notes.md
docs/configuration/: host.md
docs/configuration/settings/: custom-formats.md  download-clients.md  general.md  indexers.md  media-management.md  metadata.md  notifications.md  quality.md  tags.md  ui.md
docs/configuration/settings/profiles/: delay-profiles.md  quality-profiles.md
(+17 files in other folders)
